[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drakeuni"
version = "0.1.0"
description = "Experimental Drake batch simulation runtime for UniLab"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "N801", "N802", "N803"]
